--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.1.2",
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
+    "mobx": "^6.10.0",
+    "mobx-react": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
